# activity_tracker

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.codex/skills/activity-tracker-ai/: SKILL.md
.codex/skills/activity-tracker-ai/agents/: openai.yaml
src/: lib.rs  main.rs
