[package]
name = "app_tracker_macos"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
# Optional: For graceful shutdown on Ctrl+C
ctrlc = { version = "3.2", features = ["termination"] }
